Update AWS KMS to Java 8 and add unit tests
- Updated build.gradle.kts to target Java 8 with JReleaser for Maven Central
- Fixed Files.readString() usage (Java 11+) to use Files.readAllBytes() for Java 8 compatibility
- Created AwsSessionConfigTest with comprehensive unit tests
- Tests verify constructor, getters/setters, null handling, and AWS access key formats
- All tests passing with Java 8 target